# socket_streamer

./: .gitignore  CMakeLists.txt  Makefile  README.md  client  client.cpp  measure_temp.sh  netconfig.hpp  package.xml  server  server.cpp  video_streamer.code-workspace
include/: I3G4250D.h  LIS331DLH.h  MPU6050.h  camera_config.hpp  netconfig.hpp
isrl/: calibr_converted.yaml  isrl_config.yaml  raspi_v2_1280x720_calibr.yaml  raspi_v2_640x480_calibr.yaml
launch/: agent_run.launch  cam_node.launch  dataset.launch  euroc.launch  isrl_test.launch  make_dataset.launch  raspi_v2_1280x720_calibr.yaml  raspi_v2_640x480_calibr.yaml  restamp_dataset.launch  server.launch  test_multimaster.launch
src/: camera_node.cpp  client.cpp  imu_node.cpp  restamper.cpp  server.cpp
sysServices/: agent_start.service
